--- a/css/styles.css
+++ b/css/styles.css
@@ -2,17 +2,56 @@ body {
     margin: 0;
     padding: 0;
     line-height: 1.6;
+    font-family: sans-serif;
+    background-color: white;
+    color: navy;
 }
 
 nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 20px;
+    padding: 15px 20px;
     background-color: #f5f5f5;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
+nav a {
+    margin-right: 15px;
+    color: navy;
+    text-decoration: none;
+}
+
+nav a:hover {
+    text-decoration: underline;
+}
+
+.nav-button {
+    padding: 10px 20px;
+    background-color: navy;
+    color: white;
+    border-radius: 25px;
+    transition: background-color 0.3s, transform 0.3s;
+}
+
+.nav-button:hover {
+    background-color: #465c7a; /* A slightly darker shade of navy for hover */
+    text-decoration: none;
+    transform: translateY(-2px);
+}
+
+.nav-button:active {
+    transform: translateY(0);
+}
+
+#message {
+    padding: 10px;
+    background-color: #f9f9f9;
+    border: 1px solid #ddd;
+    margin-top: 10px;
+    font-size: 18px;
+    color: #333;
+}
 
 aside {
     float: right;
@@ -26,8 +65,8 @@ article {
 }
 
 #logo {
-    width: 100px;
-    height: 100px;
+    width: 200px;
+    height: 180px;
 }
 
 .nav-link {
